{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 364,
  "lineage": "f676c80f-fa91-abcc-c130-7770f66db3a9",
  "resources": [
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c5edae785e4e753",
            "arn": "arn:aws:ec2:us-west-1:914947747396:elastic-ip/eipalloc-06c5edae785e4e753",
            "domain": "vpc",
            "id": "eipalloc-06c5edae785e4e753",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-184-72-36-22.us-west-1.compute.amazonaws.com",
            "public_ip": "184.72.36.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:internet-gateway/igw-0626e03e968e1133b",
            "id": "igw-0626e03e968e1133b",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya igw"
            },
            "tags_all": {
              "Name": "magoya igw"
            },
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c5edae785e4e753",
            "association_id": "eipassoc-056cc9b7afeffdd3e",
            "connectivity_type": "public",
            "id": "nat-0b09b35b44622a097",
            "network_interface_id": "eni-07d5d868a5e53b773",
            "private_ip": "10.0.1.254",
            "public_ip": "184.72.36.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03707c12f47aed1ee",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:route-table/rtb-079516651d86c5579",
            "id": "rtb-079516651d86c5579",
            "owner_id": "914947747396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0626e03e968e1133b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f68e01ff0ae67119",
            "route_table_id": "rtb-079516651d86c5579",
            "subnet_id": "subnet-03707c12f47aed1ee"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_route_table.route_table",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0f68bf110596141",
            "route_table_id": "rtb-079516651d86c5579",
            "subnet_id": "subnet-067eab10d276cba0d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.igw",
            "module.eks.module.vpc.aws_route_table.route_table",
            "module.eks.module.vpc.aws_subnet.public_subnet",
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0a525c638d69360cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a525c638d69360cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-03d262517f6d4ee68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d262517f6d4ee68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-03707c12f47aed1ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03707c12f47aed1ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-067eab10d276cba0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067eab10d276cba0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04f6ef2953f68e354"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.magoya_vpc",
            "module.eks.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "magoya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:vpc/vpc-04f6ef2953f68e354",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0006471ded3a9c4fd",
            "default_route_table_id": "rtb-0c7f4bc2f4c654d05",
            "default_security_group_id": "sg-03267e3fce5d1af07",
            "dhcp_options_id": "dopt-09ea6466998fc88d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f6ef2953f68e354",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7f4bc2f4c654d05",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya vpc"
            },
            "tags_all": {
              "Name": "magoya vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1ca0bb3fb61b5ad",
            "arn": "arn:aws:ec2:us-west-1:914947747396:elastic-ip/eipalloc-0d1ca0bb3fb61b5ad",
            "domain": "vpc",
            "id": "eipalloc-0d1ca0bb3fb61b5ad",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-8-196-133.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.196.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:internet-gateway/igw-0584d7f9e81d34c5a",
            "id": "igw-0584d7f9e81d34c5a",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya igw"
            },
            "tags_all": {
              "Name": "magoya igw"
            },
            "vpc_id": "vpc-07279c00438cade23"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1ca0bb3fb61b5ad",
            "association_id": "eipassoc-08820fd557eec60b1",
            "connectivity_type": "public",
            "id": "nat-0e6e95e76aa272ea7",
            "network_interface_id": "eni-0f342a9d8ed5174b9",
            "private_ip": "10.0.1.155",
            "public_ip": "52.8.196.133",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-038679b0fe89963e9",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:route-table/rtb-007314d49dbf5ca2c",
            "id": "rtb-007314d49dbf5ca2c",
            "owner_id": "914947747396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0584d7f9e81d34c5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07279c00438cade23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.magoya_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d97902d36ff01a",
            "route_table_id": "rtb-007314d49dbf5ca2c",
            "subnet_id": "subnet-038679b0fe89963e9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030459689eac47638",
            "route_table_id": "rtb-007314d49dbf5ca2c",
            "subnet_id": "subnet-014029e5b7f708d29"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-0d7da66244ee1c312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7da66244ee1c312",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07279c00438cade23"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-043388446e7654a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043388446e7654a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07279c00438cade23"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-038679b0fe89963e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038679b0fe89963e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07279c00438cade23"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:subnet/subnet-014029e5b7f708d29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014029e5b7f708d29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "914947747396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/magoya-test": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07279c00438cade23"
          },
          "dependencies": [
            "module.vpc.aws_vpc.magoya_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "magoya_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:914947747396:vpc/vpc-07279c00438cade23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0851a30485db3c312",
            "default_route_table_id": "rtb-08201c438c408a274",
            "default_security_group_id": "sg-045d47e43b01e0039",
            "dhcp_options_id": "dopt-09ea6466998fc88d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07279c00438cade23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08201c438c408a274",
            "owner_id": "914947747396",
            "tags": {
              "Name": "magoya vpc"
            },
            "tags_all": {
              "Name": "magoya vpc"
            }
          }
        }
      ]
    }
  ]
}